Update to new sendbird logo

--- a/src/scss/chat.scss
+++ b/src/scss/chat.scss
@@ -37,6 +37,11 @@
   }
 }
 
+.logo-image {
+  background-color: $color-white;
+  border-radius: 50%;
+}
+
 .chat-root {
   display: flex;
   flex-direction: column;
