--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -4,6 +4,11 @@ body {
   background-color: $color-purple;
 }
 
+.logo-image {
+  background-color: $color-white;
+  border-radius: 50%;
+}
+
 .container {
   display: flex;
   flex-direction: column;
@@ -12,6 +17,11 @@ body {
   min-width: 900px;
   min-height: 650px;
   font-family: $font-family-exo2;
+
+  .logo-image {
+    background-color: $color-white;
+    border-radius: 50%;
+  }
 
   & > .top {
     display: flex;
